Fix z-index of header in the main page

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1070,7 +1070,6 @@
     --z-index: 13;
     background-color: transparent;
     height: 80px;
-    left: 0px;
     opacity: 1;
     position: fixed;
     top: 0px;
