--- a/css/home.css
+++ b/css/home.css
@@ -2394,7 +2394,6 @@
 .home .group-402-C61RwL {
   background-color: transparent;
   height: 80px;
-  left: 0px;
   opacity: 1;
   position: fixed;
   top: 0px;
