--- a/css/news.css
+++ b/css/news.css
@@ -17,7 +17,6 @@
   display: flex;
   height: 80px;
   justify-content: flex-end;
-  left: 0;
   min-width: 1440px;
   padding: 0 62px;
   position: fixed;
